testdata/bad/undefined-var-in-comp/index.tw
@component("hero")
    <h1>Title</h1>
@end
